feat: implement Resilience4J Circuit Breaker